# c-snake

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  todo.txt
raylib/raylib-5.0/: README.md
src/: CMakeLists.txt  common.h  game.c  game.h  graphics.c  graphics.h  gui.c  gui.h  input.h  main.c  menu_screen.c  screens.h  snippets.c
